--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,7 +104,7 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
     color-scheme: dark;
   }
