--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,6 +83,10 @@
   margin: 0;
 }
 
+a {
+  @apply text-blue-600 hover:text-blue-800;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -122,4 +126,8 @@ input,
 select,
 textarea {
   @apply rounded border p-2 outline-none ring-indigo-300 focus:ring;
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
 }
